# serializer version: 1
# name: test_basic_operation[None-cli_args3-2-200]
  '''
  Usage: cli get [OPTIONS]
  Try 'cli get --help' for help.
  
  Error: Invalid value: ticket must be of the form PROJECT-1234
  
  '''
# ---
# name: test_basic_operation[json_response0-cli_args0-0-200]
  '''
                      Issue data for TEST-1234                     
  ┏━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
  ┃           Key ┃ Value                                         ┃
  ┡━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┩
  │    idReadable │ TEST-1234                                     │
  ├───────────────┼───────────────────────────────────────────────┤
  │ assignee_name │ testuser name                                 │
  ├───────────────┼───────────────────────────────────────────────┤
  │ reporter_name │ testuser                                      │
  ├───────────────┼───────────────────────────────────────────────┤
  │   description │ Test Description                              │
  ├───────────────┼───────────────────────────────────────────────┤
  │           url │ http://youtrack-test/youtrack/issue/TEST-1234 │
  └───────────────┴───────────────────────────────────────────────┘
  
  '''
# ---
# name: test_basic_operation[json_response1-cli_args1-0-200]
  '''
  version: 0.1.2
  {
    "idReadable": "TEST-1234",
    "reporter": {
      "login": "testuser"
    },
    "customFields": [
      {
        "name": "Assignee",
        "value": {
          "name": "testuser name"
        }
      },
      {
        "name": "NotAssignee",
        "value": {
          "name": "testuser not name"
        }
      }
    ],
    "description": "Test Description"
  }
                      Issue data for TEST-1234                     
  ┏━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
  ┃           Key ┃ Value                                         ┃
  ┡━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┩
  │    idReadable │ TEST-1234                                     │
  ├───────────────┼───────────────────────────────────────────────┤
  │ assignee_name │ testuser name                                 │
  ├───────────────┼───────────────────────────────────────────────┤
  │ reporter_name │ testuser                                      │
  ├───────────────┼───────────────────────────────────────────────┤
  │   description │ Test Description                              │
  ├───────────────┼───────────────────────────────────────────────┤
  │           url │ http://youtrack-test/youtrack/issue/TEST-1234 │
  └───────────────┴───────────────────────────────────────────────┘
  
  '''
# ---
# name: test_basic_operation[json_response2-cli_args2-0-200]
  '''
                              Issue data for TEST-1234                            
  ┏━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
  ┃           Key ┃ Value                                                        ┃
  ┡━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┩
  │    idReadable │ TEST-1234                                                    │
  ├───────────────┼──────────────────────────────────────────────────────────────┤
  │ assignee_name │ testuser name                                                │
  ├───────────────┼──────────────────────────────────────────────────────────────┤
  │ reporter_name │ testuser                                                     │
  ├───────────────┼──────────────────────────────────────────────────────────────┤
  │   description │ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
  │               │ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
  │               │ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
  │               │ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
  │               │ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
  │               │ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
  │               │ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
  │               │ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
  │               │ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
  │               │ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
  │               │ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
  │               │ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
  │               │ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
  │               │ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
  │               │ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
  │               │ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
  │               │ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
  │               │ aaaa...                                                      │
  ├───────────────┼──────────────────────────────────────────────────────────────┤
  │           url │ http://youtrack-test/youtrack/issue/TEST-1234                │
  └───────────────┴──────────────────────────────────────────────────────────────┘
  
  '''
# ---
# name: test_basic_operation[json_response4-cli_args4-2-401]
  '''
  Usage: cli get [OPTIONS]
  Try 'cli get --help' for help.
  
  Error: unexpected HTTP status code, check your youtrack token: 401
  
  '''
# ---
# name: test_confirm_prompt
  '''
                      Issue data for TEST-1234                     
  ┏━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
  ┃           Key ┃ Value                                         ┃
  ┡━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┩
  │    idReadable │ TEST-1234                                     │
  ├───────────────┼───────────────────────────────────────────────┤
  │ assignee_name │ testuser name                                 │
  ├───────────────┼───────────────────────────────────────────────┤
  │ reporter_name │ testuser                                      │
  ├───────────────┼───────────────────────────────────────────────┤
  │   description │ Test Description                              │
  ├───────────────┼───────────────────────────────────────────────┤
  │           url │ http://youtrack-test/youtrack/issue/TEST-1234 │
  └───────────────┴───────────────────────────────────────────────┘
  Type the ticket id to confirm: n
  Ticket id did not match, try again!
  Type the ticket id to confirm: TEST-1234
  
  '''
# ---
# name: test_env_config
  '''
                      Issue data for TEST-1234                     
  ┏━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
  ┃           Key ┃ Value                                         ┃
  ┡━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┩
  │    idReadable │ TEST-1234                                     │
  ├───────────────┼───────────────────────────────────────────────┤
  │ assignee_name │ testuser name                                 │
  ├───────────────┼───────────────────────────────────────────────┤
  │ reporter_name │ testuser                                      │
  ├───────────────┼───────────────────────────────────────────────┤
  │   description │ Test Description                              │
  ├───────────────┼───────────────────────────────────────────────┤
  │           url │ http://youtrack-test/youtrack/issue/TEST-1234 │
  └───────────────┴───────────────────────────────────────────────┘
  
  '''
# ---
# name: test_git_config
  '''
                      Issue data for TEST-1234                     
  ┏━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
  ┃           Key ┃ Value                                         ┃
  ┡━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┩
  │    idReadable │ TEST-1234                                     │
  ├───────────────┼───────────────────────────────────────────────┤
  │ assignee_name │ testuser name                                 │
  ├───────────────┼───────────────────────────────────────────────┤
  │ reporter_name │ testuser                                      │
  ├───────────────┼───────────────────────────────────────────────┤
  │   description │ Test Description                              │
  ├───────────────┼───────────────────────────────────────────────┤
  │           url │ http://youtrack-test/youtrack/issue/TEST-1234 │
  └───────────────┴───────────────────────────────────────────────┘
  
  '''
# ---
# name: test_help
  '''
  Usage: cli [OPTIONS] COMMAND [ARGS]...
  
    Top-level command group, for global args.
  
  Options:
    --verbose     Log verbosely
    --url TEXT    Explicit youtrack url. Can be configured here, or via
                  environment variable YOUTRACK_URL, or via 'git config
                  youtrack.url'.
    --token TEXT  Explicit youtrack token. Can be configured here, or via
                  environment variable YOUTRACK_TOKEN, or via 'git config
                  youtrack.token'.
    --version     Show the version and exit.
    --help        Show this message and exit.
  
  Commands:
    get  Fetch a ticket by id.
  
  '''
# ---
# name: test_no_config_error
  '''
  Usage: cli [OPTIONS] COMMAND [ARGS]...
  Try 'cli --help' for help.
  
  Error: missing config value for 'url', please set via environment variable 'YOUTRACK_URL', or via 'git config youtrack.url'
  
  '''
# ---
